# fraud-detection-service

./: .env.example  .gitignore  README.md  docker-compose.streaming.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docker/: api.Dockerfile
docs/: architecture.md  model_card.md
infra/: README.md
infra/bicep/: main.bicep  parameters.prod.json
monitoring/grafana/dashboards/: fraud.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_benchmark.ipynb  04_fairness.ipynb
src/fraud/: __init__.py  config.py
src/fraud/data/: __init__.py  download.py  load.py  schema.py  synthetic.py
src/fraud/explain/: __init__.py  shap_reasons.py
src/fraud/fairness/: __init__.py  subgroup.py
src/fraud/features/: __init__.py  engineering.py
src/fraud/models/: __init__.py  autoencoder.py  iforest.py  metrics.py  preprocess.py  stacking.py  threshold.py  xgb.py
src/fraud/monitoring/: __init__.py  drift.py  exporter.py
src/fraud/serving/: __init__.py  app.py  db.py  metrics.py  model_wrapper.py  schemas.py  scorer.py
src/fraud/train/: __init__.py  baseline.py  dataset.py  pipeline.py  registry_demo.py  tracking.py
streaming/: __init__.py  consumer.py  producer.py
tests/: conftest.py  test_api.py  test_drift.py  test_features.py  test_models.py  test_schema.py
